fixing nav bar spacing and alignment

--- a/Assignment13/style/contact.css
+++ b/Assignment13/style/contact.css
@@ -48,7 +48,7 @@ nav {
     font-family: 'retrolight', sans-serif; /* Falls back to sans-serif if font fails to load */
     letter-spacing: 2px;
     text-shadow: .4px .4px 0 #000000; /* Top-left shadow */
-    font-size: 17px;
+    font-size: 14px;
     width: 100%;
     border-top: 5px solid #d8ea98; /* border on the top */
     border-bottom: 5px solid #d8ea98; /* border on the bottom */
@@ -68,14 +68,12 @@ nav ul li {
     color: #000;
     text-decoration: none;
     font-weight: bold;
-    width: 100%;
-    height: auto;
 }
 
 
 /* links */
 a:link {
-   font-size: 20px;
+    font-size: 14px;
    color: #000000;
    text-decoration: none;
    font-family: 'retrolight', 'sans-serif'; 
@@ -90,22 +88,6 @@ a:hover {
    color: #9bdeea;
    font-weight: bold;
    text-decoration: underline;
-}
-
-
-/* black banner styling */
-.banner {
-    height: 250px;
-    width: 100%;
-    background-color: #000000;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 3.3em;
-    text-align: center;
-    letter-spacing: 0.2em;
-    float: center;
 }
 
 
