--- a/Assignment13/style/gallery.css
+++ b/Assignment13/style/gallery.css
@@ -48,7 +48,7 @@ nav {
     font-family: 'retrolight', sans-serif; /* Falls back to sans-serif if font fails to load */
     letter-spacing: 2px;
     text-shadow: .4px .4px 0 #000000; /* Top-left shadow */
-    font-size: 17px;
+    font-size: 14px;
     width: 100%;
     border-top: 5px solid #d8ea98; /* border on the top */
     border-bottom: 5px solid #d8ea98; /* border on the bottom */
@@ -73,7 +73,7 @@ nav ul li {
 
 /* links */
 a:link {
-    font-size: 20px;
+   font-size: 14px;
    color: #000000;
    text-decoration: none;
    font-family: 'retrolight', 'sans-serif'; 
